# Chronicle

./: .gitignore  Arch_Job.md  README.md  docker-compose.yml  handoff.md  package-lock.json
api/: .env.example  Dockerfile  alembic.ini  companies.seed.json  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 34ba12d78d2b_initial.py  6b6a06f1fcbe_add_industry_experience_level.py  a8c5e1f64b73_interactions_table.py  b3d7e9f2a1c5_phase2_user_applications.py  b9d6f2a75c84_profile_about_resume.py  c1a2b3d4e5f6_jobs_content_hash.py  c4e1a7b90d21_add_department_raw.py  d2b3c4e5f6a7_jobs_search_tsv_fts.py  d5f2b8c31e40_extension_token_and_profile.py  e3c4d5f6a7b8_drop_jobs_description_html.py  e6a3c9d42f51_pgvector_jobs_embedding.py  f4d5e6a7b8c9_drop_user_extension_token.py  f7b4d0e53a62_profiles_embedding.py
api/app/: db.py  internal_auth.py  main.py  models.py  resume.py  schemas.py  security.py  util.py
api/app/eval/: metrics.py
api/app/ingest/: alerts.py  backfill_dedup.py  backfill_departments.py  (+8 more)
api/candidates/: README.md  _probe.py  batch1.json  batch2.json  batch3.json  batch4.json  batch5.json  pool_scale.json
api/scripts/: backfill_embeddings.py  bench_search.py  eval_matching.py
api/tests/: conftest.py  test_adapters.py  test_admin_ingest.py  test_content_hash.py  test_dedupe.py  test_embedder_math.py  test_embedding_text.py  test_endpoint_hardening.py  test_eval.py  test_fts_ranking.py  test_interactions.py  test_internal_auth.py  test_normalize.py  test_profile_matching.py  test_prune.py  test_resume_profile.py  test_rrf.py  test_security.py
(+109 files in other folders)
